// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollingSearchBox should render 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <SearchInput
      filterText="Test"
      onClickInput={[Function]}
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
    />
  </Headroom>
</div>
`;

exports[`ScrollingSearchBox should set correct reference 1`] = `
<div>
  <div
    class="Headroomstyles__HeaderWrapper-iDCIAq gEUoNd"
  >
    <div
      class="SearchInputstyles__Spacer-jPTMIV hTlgQL"
    >
      <div
        class="SearchInputstyles__Wrapper-eDunOl gDAAdm"
      >
        <span
          aria-hidden="true"
          class="fa fa-search SearchInputstyles__SearchIcon-bXUNqg kVDGLo"
        />
        <input
          aria-label="Placeholder"
          class="SearchInputstyles__TextInput-kJgKBC lfoCjL"
          placeholder="Placeholder"
          type="text"
          value="Test"
        />
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`ScrollingSearchBox should space search 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <SearchInput
      filterText="Test"
      onClickInput={[Function]}
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
      spaceSearch={true}
    />
  </Headroom>
</div>
`;
